--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -31,6 +31,7 @@ requirements:
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}           # [build_type == 'cuda']
+   - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
   run:
