--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -15,6 +15,8 @@ build:
   number: 1
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
+  script_env:
+    - OPEN_CE_CUDA_HOME
 
 requirements:
   build:
@@ -27,7 +29,7 @@ requirements:
   host:
    - libevent {{ libevent }}
    - bazel {{ bazel }}
-   - cudatoolkit-dev {{ cudatoolkit }} # [build_type == 'cuda']
+   - {{ compiler('cuda') }}            # [build_type == 'cuda']
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}           # [build_type == 'cuda']
