--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -16,7 +16,7 @@ build:
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
-    - OPEN_CE_CUDA_HOME
+    - CUDA_HOME
 
 requirements:
   build:
@@ -29,7 +29,6 @@ requirements:
   host:
    - libevent {{ libevent }}
    - bazel {{ bazel }}
-   - {{ compiler('cuda') }}            # [build_type == 'cuda']
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}           # [build_type == 'cuda']
