--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.3.0" %}
+{% set version = "2.4.0" %}
 
 package:
    name: tensorflow-serving-api
@@ -6,7 +6,7 @@ package:
 
 source:
    git_url: https://github.com/tensorflow/serving.git
-   git_rev: {{ version }}
+   git_rev: {{ version }}-rc2
    patches:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
 
