--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.3.0" %}
+{% set version = "2.4.0" %}
 
 package:
    name: tensorflow-serving
@@ -6,13 +6,13 @@ package:
 
 source:
    git_url: https://github.com/tensorflow/serving.git
-   git_rev: {{ version }}
+   git_rev: {{ version }}-rc2
    patches:
      - 0000-tensorflow_patches.patch         # [x86_64]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
-  number: 3
+  number: 1
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
 {% if build_type == 'cuda' %}
