--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
    git_url: https://github.com/tensorflow/serving.git
-   git_rev: {{ version }}-rc2
+   git_rev: {{ version }}
    patches:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
 
