--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
    git_url: https://github.com/tensorflow/serving.git
-   git_rev: {{ version }}-rc4
+   git_rev: {{ version }}
    patches:
      - 0000-tensorflow_patches.patch         # [x86_64]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
