--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -29,6 +29,7 @@ requirements:
    - make
    - libgcc                 # [x86_64 and build_type == 'cuda']
    - git >={{ git }}
+   - patch
   host:
    - libevent {{ libevent }}
    - bazel {{ bazel }}
