--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -12,7 +12,7 @@ source:
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
-  number: 2
+  number: 3
   string: {{ build_type }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: {{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
 {% if build_type == 'cuda' %}
@@ -28,13 +28,15 @@ requirements:
    - libtool
    - make
    - libgcc                 # [x86_64 and build_type == 'cuda']
-   - git >=2.2
+   - git >={{ git }}
+   - patch
   host:
    - libevent {{ libevent }}
    - bazel {{ bazel }}
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}           # [build_type == 'cuda' and py<38]
+   - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and cudatoolkit=='11.0']
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
@@ -46,6 +48,7 @@ requirements:
    - cudnn {{ cudnn }}               # [build_type == 'cuda']
    - nccl {{ nccl }}                 # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}         # [build_type == 'cuda' and py<38]
+   - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and cudatoolkit=='11.0']
 
 about:
   home: https://www.tensorflow.org/tfx/guide/serving
