--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -8,7 +8,8 @@ source:
    git_url: https://github.com/tensorflow/serving.git
    git_rev: {{ version }}
    patches:
-     - 0000-tensorflow_patches.patch         # [x86_64]
+     - 0000a-tensorflow_patches.patch        # [x86_64]
+     - 0000b-Add-memcpy-wrapper-patch.patch  # [x86_64 and build_type == 'cuda' and py<38]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
