--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -8,7 +8,7 @@ source:
    git_url: https://github.com/tensorflow/serving.git
    git_rev: {{ version }}
    patches:
-     - 0000a-TF-Build-fix-x86-64.patch       # [x86_64 and (build_type == 'cpu' or ((build_type == 'cuda' and cudatoolkit == '10.2') and py == 38)]
+     - 0000a-TF-Build-fix-x86-64.patch       # [x86_64 and (build_type == 'cpu' or (build_type == 'cuda' and cudatoolkit == '10.2' and py == 38))]
      - 0000b-Fix-plus-memcpy-patch.patch     # [x86_64 and build_type == 'cuda' and ((cudatoolkit == '10.2' and py<38) or (cudatoolkit == '11.0'))]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
