--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -11,7 +11,8 @@ source:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
 
 build:
-  number: 2
+  number: 3
+  string: py_{{ PKG_BUILDNUM }}
   noarch: python
 
 requirements:
