--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -11,7 +11,7 @@ source:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
 
 build:
-  number: 4
+  number: 5
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
 
@@ -19,12 +19,18 @@ requirements:
   build:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
+    # Use pins to control cos6/cos7 match
+    - libgcc-ng  {{ libgcc }}
+    - libstdcxx-ng  {{ libstdcxx }}
   host:
    - bazel {{ bazel }}
    - python # noarch package; don't tie to specific python version
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - protobuf 3.9 # currently tf-serving only works with pb 3.9
+   # Use pins to control cos6/cos7 match
+   - libgcc-ng  {{ libgcc }}
+   - libstdcxx-ng  {{ libstdcxx }}
   run:
    - python # noarch package; don't tie to specific python version
    - grpcio {{ grpcio }}
