--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -13,7 +13,7 @@ source:
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
-  number: 3
+  number: 4
   string: h{{ PKG_HASH }}_{{ build_type }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
 {% if build_type == 'cuda' %}
@@ -25,6 +25,9 @@ requirements:
   build:
    - {{ compiler('c') }}
    - {{ compiler('cxx') }}
+   # Use pins to control cos6/cos7 match
+   - libgcc-ng  {{ libgcc }}
+   - libstdcxx-ng  {{ libstdcxx }}
    - automake
    - libtool
    - make
@@ -41,6 +44,9 @@ requirements:
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
+   # Use pins to control cos6/cos7 match
+   - libgcc-ng  {{ libgcc }}
+   - libstdcxx-ng  {{ libstdcxx }}
   run:
    - libevent {{ libevent }}
    - grpcio {{ grpcio }}
