Added pins in test section

--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -36,6 +36,12 @@ requirements:
    - grpcio {{ grpcio }}
    - protobuf 3.9 # currently tf-serving only works with pb 3.9
 
+test:
+  requires:
+    # Use pins to control cos6/cos7 match
+    - libgcc-ng  {{ libgcc }}
+    - libstdcxx-ng  {{ libstdcxx }}
+
 about:
   home: https://www.tensorflow.org/tfx/guide/serving
   license: Apache 2.0
