--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -20,6 +20,9 @@ build:
   script_env:
     - CUDA_HOME
 {% endif %}
+  ignore_run_exports:
+    - libgcc-ng
+    - libstdcxx-ng
 
 requirements:
   build:
@@ -56,12 +59,9 @@ requirements:
    - nccl {{ nccl }}                 # [build_type == 'cuda']
    - tensorrt {{ tensorrt }}         # [build_type == 'cuda' and py<38]
    - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and cudatoolkit=='11.0']
-
-test:
-  requires:
-    # Use pins to control cos6/cos7 match
-    - libgcc-ng  {{ libgcc }}
-    - libstdcxx-ng  {{ libstdcxx }}
+   # Use pins to control cos6/cos7 match
+   - libgcc-ng  {{ libgcc }}
+   - libstdcxx-ng  {{ libstdcxx }}
 
 about:
   home: https://www.tensorflow.org/tfx/guide/serving
