Disable TensorRT temporarily

--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -36,7 +36,7 @@ requirements:
    - bazel {{ bazel }}
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
-   - tensorrt {{ tensorrt }}           # [x86_64 and build_type == 'cuda' and py<38]
+     #   - tensorrt {{ tensorrt }}           # [x86_64 and build_type == 'cuda' and py<38]
    - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2')]
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
@@ -48,7 +48,7 @@ requirements:
    - cudatoolkit {{ cudatoolkit }}   # [build_type == 'cuda']
    - cudnn {{ cudnn }}               # [build_type == 'cuda']
    - nccl {{ nccl }}                 # [build_type == 'cuda']
-   - tensorrt {{ tensorrt }}         # [x86_64 and build_type == 'cuda' and py<38]
+     #- tensorrt {{ tensorrt }}         # [x86_64 and build_type == 'cuda' and py<38]
    - libmemcpy_wrapper               # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2')]
 
 about:
