--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -8,8 +8,8 @@ source:
    git_url: https://github.com/tensorflow/serving.git
    git_rev: {{ version }}
    patches:
-     - 0000a-TF-Build-fix-x86-64.patch       # [x86_64 and (build_type == 'cpu' or (build_type == 'cuda' and cudatoolkit == '10.2' and py == 39))]
-     - 0000b-Fix-plus-memcpy-patch.patch     # [x86_64 and build_type == 'cuda' and ((cudatoolkit == '10.2' and py<39) or (cudatoolkit == '11.0' or cudatoolkit == '11.2'))]
+     - 0000a-TF-Build-fix-x86-64.patch       # [x86_64 and (build_type == 'cpu' or (build_type == 'cuda' and cudatoolkit == '10.2' and py == 38))]
+     - 0000b-Fix-plus-memcpy-patch.patch     # [x86_64 and build_type == 'cuda' and ((cudatoolkit == '10.2' and py<38) or (cudatoolkit == '11.0' or cudatoolkit == '11.2'))]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
@@ -43,7 +43,7 @@ requirements:
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    # Uncomment TRT after it is updated to newer versions
    #   - tensorrt {{ tensorrt }}           # [x86_64 and build_type == 'cuda' and py<38]
-   - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2')]
+   - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2' or (cudatoolkit == '10.2' and py<38))]
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
@@ -59,7 +59,7 @@ requirements:
    - nccl {{ nccl }}                 # [build_type == 'cuda']
    # Uncomment TRT after it is updated to newer versions
    #- tensorrt {{ tensorrt }}         # [x86_64 and build_type == 'cuda' and py<38]
-   - libmemcpy_wrapper               # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2')]
+   - libmemcpy_wrapper               # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2') or (cudatoolkit == '10.2' and py<38)]
    # Use pins to control cos6/cos7 match
    - libgcc-ng  {{ libgcc }}
    - libstdcxx-ng  {{ libstdcxx }}
