--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -41,8 +41,7 @@ requirements:
    - bazel {{ bazel }}
    - cudnn {{ cudnn }}                 # [build_type == 'cuda']
    - nccl {{ nccl }}                   # [build_type == 'cuda']
-   # Uncomment TRT after it is updated to newer versions
-   #   - tensorrt {{ tensorrt }}           # [x86_64 and build_type == 'cuda' and py<38]
+   - tensorrt {{ tensorrt }}           # [build_type == 'cuda' and py<38]
    - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2' or (cudatoolkit == '10.2' and py<38))]
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
@@ -57,8 +56,7 @@ requirements:
    - cudatoolkit {{ cudatoolkit }}   # [build_type == 'cuda']
    - cudnn {{ cudnn }}               # [build_type == 'cuda']
    - nccl {{ nccl }}                 # [build_type == 'cuda']
-   # Uncomment TRT after it is updated to newer versions
-   #- tensorrt {{ tensorrt }}         # [x86_64 and build_type == 'cuda' and py<38]
+   - tensorrt {{ tensorrt }}         # [build_type == 'cuda' and py<38]
    - libmemcpy_wrapper               # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2') or (cudatoolkit == '10.2' and py<38)]
    # Use pins to control cos6/cos7 match
    - libgcc-ng  {{ libgcc }}
