--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.5.1" %}
+{% set version = "2.6.0" %}
 
 package:
    name: tensorflow-serving
@@ -8,12 +8,11 @@ source:
    git_url: https://github.com/tensorflow/serving.git
    git_rev: {{ version }}
    patches:
-     - 0000a-TF-Build-fix-x86-64.patch       # [x86_64 and (build_type == 'cpu' or (build_type == 'cuda' and cudatoolkit == '10.2' and py == 38))]
-     - 0000b-Fix-plus-memcpy-patch.patch     # [x86_64 and build_type == 'cuda' and ((cudatoolkit == '10.2' and py<38) or (cudatoolkit == '11.0' or cudatoolkit == '11.2'))]
+     - 0000-TF-Build-fix-x86-64.patch       # [x86_64]
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
-  number: 4
+  number: 1
   string: h{{ PKG_HASH }}_{{ build_type }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
 {% if build_type == 'cuda' %}
@@ -25,9 +24,6 @@ requirements:
   build:
    - {{ compiler('c') }}
    - {{ compiler('cxx') }}
-   # Use pins to control cos6/cos7 match
-   - libgcc-ng  {{ libgcc }}
-   - libstdcxx-ng  {{ libstdcxx }}
    - automake
    - libtool
    - make
@@ -40,13 +36,10 @@ requirements:
    - nccl {{ nccl }}                   # [build_type == 'cuda']
    # Temporarily disable TensorRT
    #   - tensorrt {{ tensorrt }}           # [build_type == 'cuda' and py<38]
-   - libmemcpy_wrapper                 # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2' or (cudatoolkit == '10.2' and py<38))]
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
-   # Use pins to control cos6/cos7 match
-   - libgcc-ng  {{ libgcc }}
-   - libstdcxx-ng  {{ libstdcxx }}
+   - sqlite 3.33.0
   run:
    - libevent {{ libevent }}
    - grpcio {{ grpcio }}
@@ -56,7 +49,7 @@ requirements:
    - nccl {{ nccl }}                 # [build_type == 'cuda']
    # Temporarily disable TensorRT 
    #- tensorrt {{ tensorrt }}         # [build_type == 'cuda' and py<38]
-   - libmemcpy_wrapper               # [x86_64 and build_type == 'cuda' and (cudatoolkit=='11.0' or cudatoolkit=='11.2' or (cudatoolkit == '10.2' and py<38))]
+   - sqlite >=3.33.0, <4.0
 
 about:
   home: https://www.tensorflow.org/tfx/guide/serving
