--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -11,14 +11,14 @@ source:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
 
 build:
-  number: 1
+  number: 2
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
 
 requirements:
   build:
-    - {{ compiler('c') }}
-    - {{ compiler('cxx') }}
+    - {{ compiler('c') }}     #[ppc_arch != 'p10']
+    - {{ compiler('cxx') }}   #[ppc_arch != 'p10']
   host:
    - bazel {{ bazel }}
    - python # noarch package; don't tie to specific python version
