--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -12,18 +12,17 @@ source:
      - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
  
 build:
-  number: 1
+  number: 2
   string: h{{ PKG_HASH }}_{{ build_type }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
-{% if build_type == 'cuda' %}
   script_env:
-    - CUDA_HOME
-{% endif %}
+    - CUDA_HOME                 #[build_type == 'cuda']
+    - GCC_10_HOME               #[ppc_arch == 'p10']
 
 requirements:
   build:
-   - {{ compiler('c') }}
-   - {{ compiler('cxx') }}
+   - {{ compiler('c') }}        #[ppc_arch != 'p10']
+   - {{ compiler('cxx') }}      #[ppc_arch != 'p10']
    - automake
    - libtool
    - make
