--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.8.0" %}
+{% set version = "2.8.2" %}
 
 package:
    name: tensorflow-serving-api
@@ -9,11 +9,14 @@ source:
    git_rev: {{ version }}
    patches:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
+     - 0001-TF-patches-for-P10.patch                   # [ppc64le and ppc_arch == 'p10']
 
 build:
   number: 1
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
+  script_env:
+    - GCC_11_HOME
 
 requirements:
   build:
