--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.8.0" %}
+{% set version = "2.8.2" %}
 
 package:
    name: tensorflow-serving
@@ -9,7 +9,8 @@ source:
    git_rev: {{ version }}
    patches:
      - 0000-TF-Build-fix-x86-64.patch       # [x86_64]
-     - 0001-TF-Build-fix-ppc64le.patch       # [ppc64le]
+     - 0001-TF-Build-fix-ppc64le.patch      # [ppc64le and ppc_arch != 'p10']
+     - 0001-TF-patches-for-P10.patch        # [ppc64le and ppc_arch == 'p10']
  
 build:
   number: 1
@@ -17,7 +18,7 @@ build:
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
     - CUDA_HOME                 #[build_type == 'cuda']
-    - GCC_10_HOME               #[ppc_arch == 'p10']
+    - GCC_11_HOME               #[ppc_arch == 'p10']
 
 requirements:
   build:
@@ -49,6 +50,10 @@ requirements:
    # Temporarily disable TensorRT 
    #- tensorrt {{ tensorrt }}         # [build_type == 'cuda' and py<38]
    - sqlite >=3.33.0, <4.0
+
+test:
+  commands:
+    - tensorflow_model_server --version
 
 about:
   home: https://www.tensorflow.org/tfx/guide/serving
