--- a/config/conda_build_config.yaml
+++ b/config/conda_build_config.yaml
@@ -1,4 +1,4 @@
 c_compiler_version:
-  - 8.*
+  - 8.*                  #[cudatoolkit == '11.2']
 cxx_compiler_version:
-  - 8.*
+  - 8.*                  #[cudatoolkit == '11.2']
