--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.8.2" %}
+{% set version = "2.9.0" %}
 
 package:
    name: tensorflow-serving-api
@@ -15,13 +15,11 @@ build:
   number: 1
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
-  script_env:
-    - GCC_11_HOME
 
 requirements:
   build:
-    - {{ compiler('c') }}     #[ppc_arch != 'p10']
-    - {{ compiler('cxx') }}   #[ppc_arch != 'p10']
+    - {{ compiler('c') }}
+    - {{ compiler('cxx') }}
   host:
    - bazel {{ bazel }}
    - python # noarch package; don't tie to specific python version
