--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.8.2" %}
+{% set version = "2.9.0" %}
 
 package:
    name: tensorflow-serving
@@ -9,8 +9,7 @@ source:
    git_rev: {{ version }}
    patches:
      - 0000-TF-Build-fix-x86-64.patch       # [x86_64]
-     - 0001-TF-Build-fix-ppc64le.patch      # [ppc64le and ppc_arch != 'p10']
-     - 0001-TF-patches-for-P10.patch        # [ppc64le and ppc_arch == 'p10']
+     - 0001-TF-Build-fix-ppc64le.patch      # [ppc64le]
  
 build:
   number: 1
@@ -18,12 +17,11 @@ build:
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
     - CUDA_HOME                 #[build_type == 'cuda']
-    - GCC_11_HOME               #[ppc_arch == 'p10']
 
 requirements:
   build:
-   - {{ compiler('c') }}        #[ppc_arch != 'p10']
-   - {{ compiler('cxx') }}      #[ppc_arch != 'p10']
+   - {{ compiler('c') }}
+   - {{ compiler('cxx') }}
    - automake
    - libtool
    - make
