--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -17,11 +17,12 @@ build:
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
     - CUDA_HOME                 #[build_type == 'cuda']
+    - GCC_11_HOME               #[ppc_arch == 'p10']
 
 requirements:
   build:
-   - {{ compiler('c') }}
-   - {{ compiler('cxx') }}
+   - {{ compiler('c') }}      #[ppc_arch != 'p10']
+   - {{ compiler('cxx') }}    #[ppc_arch != 'p10']
    - automake
    - libtool
    - make
