--- a/tensorflow-serving-api/meta.yaml
+++ b/tensorflow-serving-api/meta.yaml
@@ -1,4 +1,4 @@
-{% set version = "2.8.2" %}
+{% set version = "2.9.1" %}
 
 package:
    name: tensorflow-serving-api
@@ -9,19 +9,19 @@ source:
    git_rev: {{ version }}
    patches:
      - 0001-Replace-k8-with-ppc-for-Power-builds.patch # [ppc64le]
-     - 0001-TF-patches-for-P10.patch                   # [ppc64le and ppc_arch == 'p10']
+     - 0001-TF-Build-fix-ppc64le.patch                 # [ppc64le and ppc_arch == 'p10']
 
 build:
   number: 1
   string: py_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }}
   noarch: python
-  script_env:
-    - GCC_11_HOME
+  script_env:        #[ppc_arch == 'p10']
+    - GCC_11_HOME    #[ppc_arch == 'p10']
 
 requirements:
   build:
-    - {{ compiler('c') }}     #[ppc_arch != 'p10']
-    - {{ compiler('cxx') }}   #[ppc_arch != 'p10']
+    - {{ compiler('c') }}        #[ppc_arch != 'p10']
+    - {{ compiler('cxx') }}      #[ppc_arch != 'p10']
   host:
    - bazel {{ bazel }}
    - python # noarch package; don't tie to specific python version
