--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -12,7 +12,7 @@ source:
      - 0001-TF-Build-fix-ppc64le.patch      # [ppc64le]
  
 build:
-  number: 1
+  number: 2
   string: h{{ PKG_HASH }}_{{ build_type }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cpu'] 
   string: h{{ PKG_HASH }}_{{ build_type }}{{ cudatoolkit | replace(".*", "") }}_py{{ python | replace(".", "") }}_pb{{ protobuf | replace(".*", "")}}_{{ PKG_BUILDNUM }} # [build_type == 'cuda']
   script_env:
@@ -38,7 +38,7 @@ requirements:
    - numpy {{ numpy }}
    - grpcio {{ grpcio }}
    - python {{ python }}
-   - sqlite 3.33.0
+   - sqlite
   run:
    - libevent {{ libevent }}
    - grpcio {{ grpcio }}
