--- a/tensorflow-serving/meta.yaml
+++ b/tensorflow-serving/meta.yaml
@@ -8,8 +8,7 @@ source:
    git_url: https://github.com/tensorflow/serving.git
    git_rev: {{ version }}
    patches:
-     - 0000-TF-Build-fix-x86-64.patch       # [x86_64]
-     - 0001-TF-Build-fix-ppc64le.patch      # [ppc64le]
+     - 0001-TF-Build-fixed.patch
  
 build:
   number: 1
